  syntax = "proto3";
  package key_value;

  message KeyRequest {
    string key = 1;
  }

  message KeyValuePair {
    string key = 1;
    bytes value = 2;
  }

  message KeysRequest {
    string prefix = 1;
  }

  message KeysResponse {
    repeated string keys = 1;
  }

  service KeyValueStorage {
    rpc FindByKey (KeyRequest) returns (KeyValuePair);
    rpc Delete (KeyRequest) returns (KeyRequest);
    rpc Insert (KeyValuePair) returns (KeyValuePair);
    rpc Keys (KeysRequest) returns (KeysResponse);
  }